--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ user: git
 # You only have to change the default if you have configured Unicorn
 # to listen on a custom port, or if you have configured Unicorn to
 # only listen on a Unix domain socket.
-gitlab_url: "http://192.168.59.103:8080"
+gitlab_url: "http://192.168.59.103:8080/box/api/gls"
 
 http_settings:
 #  user: someone
